--- a/css/project.css
+++ b/css/project.css
@@ -21,11 +21,16 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 hr { 
     width:100%;
+}
+
+a { 
+    text-decoration: none;
+    color: black;
 }
 
 img { 
@@ -75,6 +80,10 @@ COLOR CLASSES
 .airbnb-highlight {
     color: #E61E4D;
 }
+
+.wta-highlight { 
+    color: #006699;
+}
 /* ------------------------------------
 
  MOLECULE - TYPOGRAPHY
@@ -92,6 +101,11 @@ COLOR CLASSES
 /* ------------------------------------
 HEADER INFO 
 * ------------------------------------------ */
+
+.header-img { 
+    margin: 0 auto;
+    width: 50%;
+}
 
 .header-pre { 
     max-width: 45em;
@@ -130,7 +144,7 @@ HEADER INFO
 }
 
 .col-3-header-wrapper p { 
-    line-height: .75em;
+    margin: .5em 0;
 }
 
 
@@ -156,9 +170,27 @@ HEADER INFO
     justify-content: space-between;
 }
 
+.col-2-showcase { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.col-2 .col:nth-child(1) { 
+    padding-right: 1em;
+}
+
+.col-2 .col:nth-child(2) { 
+    padding-left: 1em;
+}
+
+
 .col { 
+    box-sizing: border-box;
     width: 37em;
 }
+
+/* ----------------------------------------------------- COLUMN 3 --*/
 
 .col-3 { 
     display: flex;
@@ -166,9 +198,21 @@ HEADER INFO
 }
 
 .col-3 > div { 
-    max-width: 20em;
+    box-sizing: border-box;
+    max-width: 22em;
 }
 
+.col-3 div:nth-child(1) { 
+    padding-right: 1em;
+}
+
+.col-3 div:nth-child(2) { 
+    padding: 0 1em;
+}
+.col-3 div:nth-child(3) { 
+    padding-left: 1em;
+}
+/* This is the wrapper for the col-3, in case you want a title */
 .three-column-block { 
     margin: 3em 0;
 }
@@ -192,8 +236,16 @@ WHITE SPACE
     margin: 3em 0;
 }
 
+.ws-top-bottom-5 { 
+    margin: 5em 0;
+}
+
 .ws-top-3 { 
     margin-top: 3em;
+}
+
+.ws-pad-top-3 { 
+    padding-top:3em;
 }
 
 .ws-pad-top-5 { 
@@ -214,6 +266,28 @@ WHITE SPACE
 
 .ws-bottom-5 { 
     margin-bottom: 5em;
+}
+
+/*-----------------------------------------------------------------------END CARD ---- */
+
+.end { 
+    text-align: center;
+}
+
+.end h3 { 
+    font-size: 2em;
+}
+
+.end a { 
+    text-decoration: none;
+    color: gray;
+    font-size: 1.25em;
+    text-align: center;
+    padding: 0 2em;
+}
+
+.end a:hover { 
+    color: black;
 }
 
 @media only screen and (max-width: 1200px) { 
@@ -268,12 +342,10 @@ WHITE SPACE
         justify-content: space-between;
     }
 
-    .col-2:nth-child(0) { 
-        margin-right:2em;
-    }
-
-    .col-2:nth-child(1) { 
-        margin-left: 2em;
+    .col-2-showcase { 
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .col { 
@@ -300,4 +372,79 @@ WHITE SPACE
     .bg-gray { 
         background-color: var(--background-gray);
     }
+}
+
+/* -------------------------------------------------------------- MEDIA QUERY 
+ *
+ * -------------------------------------------------------------- MOBILE 650px */
+@media only screen and (max-width: 650px) { 
+    .body-wrapper { 
+        max-width: 100vw;
+        padding: 2em;
+    }
+
+    .col-2, .col-3, .col-3-header, .col-2-showcase { 
+        display: block;
+    }
+
+    /* ----------------------------------------------------- TYPOGRAPHY --- */
+    h2 { 
+        font-size: 2em;
+    }
+
+    .header-pre p { 
+        font-size: 1.25em;
+    }
+
+    /* ----------------------------------------------------- HEADER INFO --- */
+
+    .header-img { 
+        width: 100%;
+    }
+
+    .header-pre { 
+        padding: 1em 0;
+    }
+
+    .col-3-header-wrapper { 
+        margin-bottom: 2em;
+    }
+
+    
+    /* ----------------------------------------------------- TEXT BOX --- */
+
+    .text-block { 
+        margin-bottom: 7em;
+    }
+
+    .col { 
+        width: auto;
+    }
+
+    .col-2 .col:nth-child(1), .col-2 .col:nth-child(2) { 
+        padding: 0;
+    }
+
+    .col-3 div:nth-child(1), .col-3 div:nth-child(2), .col-3 div:nth-child(3) { 
+        padding: 1em 0;
+        max-width: 100%;
+        padding-right: 2em;
+    }
+
+    .three-column-block > h3 { 
+        margin: 1em 0em;
+    }
+
+    .bg-gray .col { 
+        margin: 2em 0;
+    }
+        
+    /* ----------------------------------------------------- FOOT --- */
+
+    .end a { 
+        display: block;
+        padding: 2em 0;
+    }
+
+    
 }
