--- a/css/home.css
+++ b/css/home.css
@@ -45,7 +45,7 @@ html, body {
 /* --- COMPONENT: CARD --- */
 .card-wrapper { 
     width: calc(100% - 100px);
-    margin: 10em auto;
+    margin: 7em auto;
     height: 23em;
     background-color: blue;
     position: relative;
@@ -57,10 +57,10 @@ html, body {
     height: 23em;
     top: 0;
     right: 0;
-    background-color: pink;
     z-index: 1;
     display: block;
 }
+
 
 .clickable-wrapper { 
     position: relative;
@@ -77,7 +77,7 @@ html, body {
 }
 
 .blurb { 
-    width: 30%;
+    width: 40%;
     position: absolute; 
     bottom: 2em;
     left: 3em;
@@ -97,7 +97,7 @@ html, body {
 
 .img { 
     position: absolute;
-    width: 65%;
+    width: 55%;
     height: 100%;
     right: 0;
 }
@@ -108,6 +108,32 @@ html, body {
     background-repeat: no-repeat;
     background-size: 40em;
     background-position: 5vw 0vw;
+}
+
+.airbnb-card { 
+    background-color: pink;
+}
+
+.wta-img { 
+    background-color: #5793B1;
+    background-image: url('../assets/transit-sample.png');
+    background-repeat: no-repeat;
+    background-size: 50em;
+    background-position: -3vw -1vw;
+}
+
+.wta-card { 
+    background-color: #5793B1;
+}
+
+.mental-img, .mental-card { 
+    background-color: #848E83;
+}
+
+.mental-img { 
+    background-image: url('../assets/mental-reminder-sample.png');
+    background-repeat: no-repeat;
+    background-size: 50em;
 }
 
 [data-aos="reveal"] { 
