--- a/css/case-study.css
+++ b/css/case-study.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css3?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 
 :root { 
     --main-text-color: black;
     --main-font: 'Poppins', sans-serif;
     --light-gray: #AAA;
+    --very-light-gray: #EEE;
+    --airbnb-pink: #E19DA5;
     font-size: 16px;
 }
 
@@ -24,6 +26,19 @@ p {
     line-height: 1.75em;
 }
 
+p a { 
+    color: black;
+    text-decoration: none;
+}
+
+.default-padding { 
+    padding: 50px 0;
+}
+
+.pad-top { 
+    padding-top: 150px;
+}
+
 /* ------------------------------------------------- SPACING/WRAPPERS --- */
 
 .wrapper { 
@@ -32,24 +47,93 @@ p {
     padding: 0px 50px;
 }
 
+/* --- NAV --- */
+nav { 
+    position: sticky;
+    top: 0;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 3;
+    background-color: white;
+}
+
+.nav-wrapper { 
+    max-width: 1380px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+nav a { 
+    text-decoration: none;
+    color: black;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.line { 
+    position: absolute;
+    left: 11em;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 0.3em;
+    width: 7em;
+    background-color: black;
+}
+
+.left, .right {
+    display: flex;
+}
+
+
+
+.right a { 
+    font-size: .9em;
+    color: gray;
+    margin: auto;
+    padding: 0 1.25em;
+    font-weight: 400;
+    transition-property: color;
+    -webkit-transition-property: color;
+    transition: 0.3s ease-out;
+    -webkit-transition-property: 0.3s ease-out;
+}
+
+.right a:hover { 
+    color: black;
+}
+
 /* --- COMPONENT: HEADER --- */
 .header { 
     width: 100%;
-    height: 30em;
-    background-image: url(../assets/airbnb/fransiskus-filbert-mangundap-l8OKlH71Xh0-unsplash.jpg);
+    height: 33em;
     background-size: cover;
     background-position: center;
     position: relative;
+}
+
+.header.airbnb { 
+    background-image: url(../assets/airbnb/fransiskus-filbert-mangundap-l8OKlH71Xh0-unsplash.jpg);
+}
+
+.header.wta { 
+    background-image: url(../assets/wta/wta-bg.png);
 }
 
 .text p, .text h1 {
     color: white;
 }
 
+.header .text.black p, .header .text.black h1 { 
+    color: black;
+}
+
 .text { 
     max-width: 1380px;
     margin: auto;
-    padding-top: 210px;
+    padding-top: 14em;
     padding-left: 50px;
     padding-right: 50px;
 }
@@ -108,7 +192,7 @@ p {
 
 
 /* --- MOLECULE: text-block --- */
-.text-block h3 { 
+.text-block h3, .video-text-block h3 { 
     font-size: 2.25em;
     font-weight: 400;
     max-width: 80%;
@@ -116,14 +200,26 @@ p {
     margin-bottom: 1em;
 }
 
-.text-block h5 { 
+.text-block.not-header h3{ 
+   max-width: 100%; 
+}
+
+.text-block h5, .video-text-block h5{ 
+    font-size: 1em;
     margin: 1em 0;
 }
 
 .image-wrapper { 
-    grid-column: 6/9;
     margin: auto 0;
     min-height: 20em;
+}
+
+.image-left { 
+    grid-column: 1/4;
+}
+
+.image-right { 
+    grid-column: 6/9;
 }
 
 .image-wrapper > img { 
@@ -138,6 +234,95 @@ p {
     margin: auto 0;
 }
 
+/* --- COMPONENT: TEXT-RIGHT --- */
+.text-right .text-block { 
+    grid-column: 5/9;
+    margin: auto 0;
+}
+
+
+/* --- COMPONENT: TWO-COL --- */
+.two-col { 
+    padding: 50px 0;
+}
+
+.text-two-col { 
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: 20px;
+}
+
+.col:first-of-type { 
+    grid-column: 1/5;
+    padding-right: 20px;
+    padding-left: 0;
+}
+
+.col { 
+    grid-column: 5/9;
+    padding-left: 20px;
+}
+
+/* --- CARDS --- */
+
+.two-cards { 
+    padding: 50px 0;
+}
+.card { 
+    padding: 9% 13%;
+    color: white;
+}
+
+.pink-card { 
+    background-color: var(--airbnb-pink);
+}
+
+.gray-card { 
+    background-color: var(--very-light-gray);
+    color: black;
+}
+
+.card h3 { 
+    font-weight: 400;
+    font-size: 1.5em;
+    line-height: 2em;
+    margin: 0;
+}
+
+.two-cards div:first-child { 
+    grid-column: 1/5;
+}
+
+.two-cards div:nth-child(2) { 
+    grid-column: 5/9;
+}
+
+j/* --- full-width-img --- */
+.full-width-img { 
+    margin:50px 0;
+}
+
+.full-width-img img { 
+    width: 100%;
+    height: auto;
+    padding:50px 0;
+}
+
+/* --- VIDEOS NEED THEIR OWN THING BECAUSE VIMEO IS CRINGE --- */
+.video-right { 
+    display: flex;
+    justify-content: space-between;
+}
+
+.video-text-block { 
+    width: 37em;
+    margin: auto 0;
+}
+
+.video { 
+    width: 37em;
+}
+
 
 @media only screen and (max-width : 800px) { 
     /* --- TEXT LEFT --- */
@@ -149,6 +334,29 @@ p {
     .text-block h3 { 
         max-width: 100%;
     }
+
+    .text-right.brief { 
+        display: block;
+    }
+
+    .not-header { 
+        padding-top: 50px;
+    }
+
+    /* --- TWO-COL --- */
+    .text-two-col { 
+        display: block;
+    }
+
+    .col:first-of-type, .col { 
+        padding: 0;
+    }
+
+    /* --- CARD --- */
+    .card { 
+        margin: 50px 0;
+    }
+
 }
 
 
@@ -160,6 +368,14 @@ p {
 
     p { 
         font-size: 1em;
+    }
+
+    .nav-wrapper { 
+        padding: 0 15px;
+    }
+
+    .line { 
+        display: none;
     }
 
     /* --- MOBILE-HEADER --- */
